fixing accessibily for browser

--- a/index.html
+++ b/index.html
@@ -5,12 +5,69 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mehedi Hassan Shawon — Developer & Media Theorist</title>
+  
+  <!-- SEO Meta Tags -->
+  <title>Mehedi Hassan Shawon — Communication Designer & Media Technologist</title>
+  <meta name="description" content="Portfolio of Mehedi Hassan Shawon, a Communication Designer & Media Technologist specializing in Information Architecture, UX Design, and Digital Storytelling.">
+  <meta name="keywords" content="Communication Design, Media Technologist, Information Architecture, UX Design, React, Data Visualization, Documentary, Web Development, Ball State EMDD, CICS">
+  <meta name="author" content="Mehedi Hassan Shawon">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mehedi Hassan Shawon — Communication Designer & Media Technologist">
+  <meta property="og:description" content="Designing information systems that build trust and clarity. Specializing in Information Architecture, Interaction Patterns, and Narrative.">
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
+    
+  <!-- Structured Data (JSON-LD) for Bot Readability -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Person",
+          "name": "Mehedi Hassan Shawon",
+          "jobTitle": "Communication Designer & Media Technologist",
+          "description": "Communication Designer & Media Technologist focusing on information architecture, interaction patterns, and narrative.",
+          "knowsAbout": ["Information Architecture", "Full-Stack Development", "UX Design", "Documentary Production", "Data Visualization", "React", "Node.js"],
+          "sameAs": [
+            "https://github.com/00Shawon"
+          ]
+        },
+        {
+          "@type": "SoftwareSourceCode",
+          "name": "Sundarbans Climate Crisis Platform",
+          "description": "Interactive platform combining information architecture, geospatial data visualization, and documentary storytelling to communicate climate displacement.",
+          "programmingLanguage": ["React", "Leaflet.js", "MongoDB"],
+          "codeRepository": "https://github.com/00Shawon/Sundorban"
+        },
+        {
+          "@type": "SoftwareSourceCode",
+          "name": "Bengali Wedding Digital Experience",
+          "description": "Digital communication platform for Bengali wedding ceremonies focusing on information architecture and cultural translation.",
+          "programmingLanguage": ["React", "Firebase", "Figma"],
+          "codeRepository": "https://github.com/00Shawon/Rafar-Biye"
+        },
+        {
+          "@type": "SoftwareSourceCode",
+          "name": "The Gallery",
+          "description": "Full-stack application enabling artists to showcase portfolios, curate favorites, and engage through social features.",
+          "programmingLanguage": ["MERN Stack", "React", "Node.js", "MongoDB"]
+        },
+        {
+          "@type": "SoftwareSourceCode",
+          "name": "Trip Hub",
+          "description": "Comprehensive travel booking system featuring secure payments, fraud detection, and multi-role dashboards.",
+          "programmingLanguage": ["MERN Stack", "Stripe", "TanStack Query"]
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
